<resources>
    <string name="app_name">Strokes Calculator 2.0</string>
    <string name="strokes_calculation">Strokes and\n Volume Calculation</string>
    <string name="pump_output">Pump Output</string>
    <string name="volume_calculations">Volume calculations</string>
    <string name="annular_velocity">Annular velocity</string>

    <string name="zero">0.00</string>
    <string name="rate_app">Rate App</string>
    <string name="other_apps">Other Apps</string>

    <string name="unit_ad_id">ca-app-pub-9330384453784359/1700747062</string>

    <string name="liner_diameter">Liner diameter</string>
    <string name="in">in</string>
    <string name="stroke_length">Stroke Length</string>
    <string name="percent">%</string>
    <string name="pump_efficiency">Pump Efficiency</string>
    <string name="clear">CLEAR</string>
    <string name="calculate">CALCULATE</string>
    <string name="pump_output_textView">Pump Output</string>
    <string name="bbl_stk">bbl/stk</string>
    <string name="units">Units</string>
    <string name="rod_length">Rod Length</string>
    <string name="drill_string_data">Drill String Data</string>
    <string name="drill_string_id">Drill String ID</string>
    <string name="drill_string_od">Drill String OD</string>
    <string name="feet">feet</string>
    <string name="drill_string_length">Drill String Length</string>
    <string name="casing_data">Casing Data</string>
    <string name="casing_id">Casing ID</string>
    <string name="casing_length">Casing Depth</string>
    <string name="open_hole_data">Open Hole Data</string>
    <string name="open_hole_id">Open Hole ID</string>
    <string name="open_hole_depth">Open Hole Depth</string>
    <string name="drill_string_volume">Drill String Volume</string>
    <string name="bbl">bbl</string>
    <string name="empty_casing_volume">Empty Casing Volume</string>
    <string name="annular_casing_volume">Annular Casing Volume</string>
    <string name="empty_casing_strokes">Empty Casing Strokes</string>
    <string name="drill_string_strokes">Drill String Strokes</string>
    <string name="annular_casing_strokes">Annular Casing Strokes</string>
    <string name="stk">stk</string>
    <string name="empty_open_hole_volume">Empty Open Hole Volume</string>
    <string name="empty_open_hole_strokes">Empty Open Hole Strokes</string>
    <string name="open_hole_annular_volume">Open Hole Annular Volume</string>
    <string name="open_hole_annular_strokes">Open Hole Annular Strokes</string>
    <string name="pump_data">Pump Data</string>
    <string name="surface_to_bit_volume">Surface to Bit Volume</string>
    <string name="surface_to_bit_strokes">Surface to Bit Strokes</string>
    <string name="bottoms_up_volume">Bottoms-Up Volume</string>
    <string name="bottoms_up_strokes">Bottoms-Up Strokes</string>
    <string name="surface_to_surface_volume">Surface to Surface Volume</string>
    <string name="surface_to_surface_strokes">Surface to Surface Strokes</string>
    <string name="inner_diameter">Inner Diameter</string>
    <string name="outer_diameter">Outer Diameter</string>
    <string name="depth">Depth</string>
    <string name="enter_name">Enter Name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_data">Add Data</string>
    <string name="dismiss">Dismiss</string>
    <string name="end_md">End MD</string>
    <string name="m">m</string>
    <string name="top_md">Top MD</string>
    <string name="drill_string_id_listview">Drill String ID</string>
    <string name="drill_string_od_listview">Drill String OD</string>
    <string name="name">Name</string>
    <string name="update_data">Update Data</string>
    <string name="casing_data_results">Casing Data</string>
    <string name="volume">Volume</string>
    <string name="open_hole_data_results">Open Hole Data</string>
    <string name="casing_annulus">Casing Annulus</string>
    <string name="strokes">Strokes</string>
    <string name="open_hole_annulus">Open Hole Annulus</string>
    <string name="drill_pipe_volume">Drill String Volume - Surface to Bottom</string>
    <string name="total_annular_volume_bottoms_up">Total Annular Volume - Bottoms-Up</string>
    <string name="strokes_per_minute">Strokes Per Minute</string>
    <string name="spm">SPM</string>
    <string name="ft_min">ft/min</string>
    <string name="PREFS_AV_PO_UNIT">AV_PUMP_OUTPUT_UNIT</string>
    <string name="PREFS_AV_DIA_UNIT">PREFS_AV_DIA_UNIT</string>
    <string name="PREFS_AV_SPEED_UNITS">PREFS_AV_SPEED_UNITS</string>
    <string name="image_of_tank">Image of Tank</string>
    <string name="h_height">H - height</string>
    <string name="w_width">W - width</string>
    <string name="l_length">L - length</string>
    <string name="f_fluid_level">F - fluid level</string>
    <string name="d_diameter">D - diameter</string>
    <string name="tank_total_volume">Tank Total Volume</string>
    <string name="fluid_volume_in_tank">Fluid Volume in Tank</string>

    <string name="first_run_message">Using this application you agree that you are using it at your own risk and you

understand that. If something happens like getting run off location, you lose your job

or something else I am not to blame since you could always calculate everything by

yourself.\nIf you agree to above please hit okay and please rate app if you feel like it!

Thanks!</string>
    <string name="icon_image">icon_image</string>
    <string name="input_drill_string_from_bit">Input Drill String Parts Starting From Bit</string>
    <string name="how_to">HOW TO</string>

    <string name="how_to_text"><b>Hole Data</b> \n
Press plus "+" sign in the right bottom corner. \n
Inside pop-up window you will find 4 input fields: \n
- ID (decimal value) \n
- OD (decimal value)- can be set to 0 or left empty \n
- Top MD - set to 0 if casing/open hole is on top otherwise you should set it starting depth of open hole/liner \n
- End MD - should be set to setting depth of casing/liner and for open hole to current depth \n \n

For Example, if 13.375 casing set depth is 1077 m and it starts from the surface: \n
ID = 12.476 \n
OD = 13.375 \n
Top MD = 0 \n
End MD = 1077 \n \n

Then for open hole (12 1/4 open hole with current depth 3000 m) \n
ID = 12.25  \n
OD = 0 \n
Top MD = 1077 (casing set depth) \n
End MD = 3000  \n \n

Hope this part is clear! \n \n
         \n
        <b>Drill String</b> \n
IMPORTANT: Enter always the length of each drill string part, not depth it is at or calculations will be wrong. \n
There are 2 ways of entering drill string data: \n
1. From the surface: \n
First, enter most top part of your drill string, normally it would get like this: Drill Pipe 1 -> Drill Pipe 2 -> Heave Weight Drill Pipe -> Drill Collars -> Bit (this is extremely simple example) \n
To enter data you press plus "+" sign and inside pop-up window you enter: \n
Drill string ID (decimal value) \n
Drill string OD (decimal value) \n
Drill string Length  \n \n

2. From the Bit: (select check box in order to do so) \n
First, enter bit and then other drill string parts as follows, for example, Bit -> Drill Collars -> Heave Weight Drill Pipe -> Drill Pipe 2 -> Drill Pipe 1 \n
Rest stays the same. \n \n

At any point, you can edit values of your drill string, change depths etc. \n
If by any chance you want to change an order you entered drill string parts you can also do so at any time.
</string>

</resources>
