<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/av_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <GridLayout
        android:id="@+id/grid_1_av"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/av_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="0"
            android:padding="@dimen/listViePadding"
            android:text="@string/pump_output"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <EditText
            android:id="@+id/av_et_pump_output_input"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="6"
            android:inputType="numberDecimal"
            android:padding="@dimen/listViePadding"
            android:selectAllOnFocus="true"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <TextView
            android:id="@+id/av_et_pump_output_unit"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="0"
            android:padding="@dimen/listViePadding"
            android:text="@string/bbl_stk"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="1"
            android:padding="@dimen/listViePadding"
            android:text="@string/strokes_per_minute"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <EditText
            android:id="@+id/av_et_spm_input"
            android:layout_column="1"
            android:layout_row="1"
            android:ems="6"
            android:inputType="numberDecimal"
            android:padding="@dimen/listViePadding"
            android:selectAllOnFocus="true"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <TextView
            android:id="@+id/av_et_spm_unit"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="1"
            android:padding="@dimen/listViePadding"
            android:text="@string/spm"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="2"
            android:padding="@dimen/listViePadding"
            android:text="@string/inner_diameter"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <EditText
            android:id="@+id/av_et_id_input"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="6"
            android:inputType="numberDecimal"
            android:padding="@dimen/listViePadding"
            android:selectAllOnFocus="true"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <TextView
            android:id="@+id/av_et_id_unit"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="2"
            android:padding="@dimen/listViePadding"
            android:text="@string/in"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <TextView
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="3"
            android:padding="@dimen/listViePadding"
            android:text="@string/outer_diameter"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <EditText
            android:id="@+id/av_et_od_input"
            android:layout_column="1"
            android:layout_row="3"
            android:ems="6"
            android:inputType="numberDecimal"
            android:padding="@dimen/listViePadding"
            android:selectAllOnFocus="true"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <TextView
            android:id="@+id/av_et_od_unit"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="3"
            android:padding="@dimen/listViePadding"
            android:text="@string/in"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/av_linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grid_1_av"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/av_calculate"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textAlignment="center"
            android:textSize="@dimen/generalTextSize" />

        <Button
            android:id="@+id/av_clear_data"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textAlignment="center"
            android:textSize="@dimen/generalTextSize" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/grid_2_av"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/av_linear_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_row="0"
            android:padding="@dimen/listViePadding"
            android:text="@string/annular_velocity"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <TextView
            android:id="@+id/av_ann_vel_results"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:ems="6"
            android:padding="@dimen/listViePadding"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />

        <TextView
            android:id="@+id/av_ann_vel_results_units"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_row="0"
            android:padding="@dimen/listViePadding"
            android:text="@string/ft_min"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="@dimen/listViewTextSize" />
    </GridLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/av_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/unit_ad_id">

    </com.google.android.gms.ads.AdView>

</RelativeLayout>