<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/recycler_view_annulus_results_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/generalTextSize"
        android:padding="@dimen/paddingAround"
        android:text="@string/volume"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/volume"
            android:textColor="@color/textColor"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/listViewTextSize"
            android:padding="@dimen/listViePadding"/>
        <TextView
            android:id="@+id/annulus_result_volume"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="@color/textColor"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/listViewTextSize"
            android:text="@string/zero"
            android:padding="@dimen/listViePadding"/>
        <TextView
            android:id="@+id/annulus_result_volume_units"
            android:layout_row="0"
            android:layout_column="2"
            android:textColor="@color/textColor"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="@dimen/listViewTextSize"
            android:text="@string/bbl"
            android:padding="@dimen/listViePadding"/>
        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/strokes"
            android:textColor="@color/textColor"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/listViewTextSize"
            android:padding="@dimen/listViePadding"/>
        <TextView
            android:id="@+id/annulus_result_strokes"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="@color/textColor"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="@dimen/listViewTextSize"
            android:text="@string/zero"
            android:padding="@dimen/listViePadding"/>
        <TextView
            android:id="@+id/annulus_result_strokes_units"
            android:layout_row="1"
            android:layout_column="2"
            android:textColor="@color/textColor"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="@dimen/listViewTextSize"
            android:text="@string/stk"
            android:padding="@dimen/listViePadding"/>
    </GridLayout>

</LinearLayout>